Updated basic auth token

--- a/resources/config/config.json
+++ b/resources/config/config.json
@@ -6,5 +6,5 @@
     "user": "root",
     "password": "123456"
   },
-  "auth.basic.token": "aW5ub3ZlY3M6aW5ub3ZlY3M="
+  "auth.basic.token": "YmljeWNsZTpiaWN5Y2xl"
 }
